--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
       <h3>Блог лучшего котейки</h3>
       <p>Статический блог про домашнюю деятельность</p>
+        <audio controls preload = "metadata"></audio>
       </div>
     </section>
 
